app/globals.css
@import '@fortawesome/fontawesome-svg-core/styles.css';
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply font-sans;
}

@layer base{
    html,  body{
        @apply overflow-x-hidden;
    }
}

img {
    @apply w-full h-auto;
}

